--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "qs": "^6.9.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
