--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "echarts": "^4.7.0",
     "element-ui": "^2.12.0",
     "qs": "^6.9.1",
     "vue": "^2.6.10",
